Added a stored procedure to find leave by Id and also wired SQL client and Dapper for the SQL queries

--- a/Employee-Intranet/Emp_Intranet-Api/Web.config
+++ b/Employee-Intranet/Emp_Intranet-Api/Web.config
@@ -3,7 +3,12 @@
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
+
 <configuration>
+  <connectionStrings>
+
+    <add name="Emp_Intranet-DB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Database=Emp_Intranet-DB; Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
