--- a/Employee-Intranet/Emp_Intranet-Api/packages.config
+++ b/Employee-Intranet/Emp_Intranet-Api/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="Dapper" version="2.1.21" targetFramework="net472" />
   <package id="jQuery" version="3.7.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net472" />
@@ -32,6 +33,7 @@
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net472" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.8.5" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
