Added the Stuff endpoint and fetched from a few tables

--- a/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
+++ b/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
@@ -154,6 +154,7 @@
     <Compile Include="API\API_Helper\ApiHelper.cs" />
     <Compile Include="API\API_Helper\IApiHelper.cs" />
     <Compile Include="API\LeaveEndPoint.cs" />
+    <Compile Include="API\StuffEndPoint.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
