--- a/Employee-Intranet/Emp_Intranet-Api/Emp_Intranet-Api.csproj
+++ b/Employee-Intranet/Emp_Intranet-Api/Emp_Intranet-Api.csproj
@@ -218,17 +218,20 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LeaveController.cs" />
+    <Compile Include="Controllers\StuffController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DataAccess\InternalDataAccess\ISqlDataAccess.cs" />
     <Compile Include="DataAccess\InternalDataAccess\SqlDataAccess.cs" />
-    <Compile Include="DataAccess\IUserData.cs" />
-    <Compile Include="DataAccess\LeaveData.cs" />
-    <Compile Include="DataAccess\UserData.cs" />
+    <Compile Include="DataAccess\Interface\IUserData.cs" />
+    <Compile Include="DataAccess\Query\LeaveData.cs" />
+    <Compile Include="DataAccess\Query\StuffData.cs" />
+    <Compile Include="DataAccess\Query\UserData.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\LeaveModel.cs" />
+    <Compile Include="Models\StuffModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
