--- a/Employee-Intranet/Emp_Intranet-Api/packages.config
+++ b/Employee-Intranet/Emp_Intranet-Api/packages.config
@@ -19,12 +19,14 @@
   <package id="Microsoft.AspNetCore.Routing" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.ObjectPool" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.OpenApi" version="1.2.3" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
@@ -36,8 +38,9 @@
   <package id="System.Data.SqlClient" version="4.8.5" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
