Displayed the employee details on Home

--- a/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
+++ b/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
@@ -193,6 +193,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\HomeDisplayModel.cs" />
+    <Compile Include="Models\IHomeDisplayModel.cs" />
     <Compile Include="Models\LeaveModel.cs" />
     <Compile Include="Models\StuffModel.cs" />
     <Compile Include="Models\UserModel.cs" />
