Added a Modal/Pop up to the Index page to edit or update some inputs

--- a/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
+++ b/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
@@ -210,6 +210,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\Modal.js" />
     <Content Include="Unity.Mvc3.README.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
