--- a/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
+++ b/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
@@ -193,13 +193,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\HomeDisplayModel.cs" />
-    <Compile Include="Models\IHomeDisplayModel.cs" />
-    <Compile Include="Models\ILeaveDisplayModel.cs" />
-    <Compile Include="Models\LeaveDisplayModel.cs" />
-    <Compile Include="Models\LeaveModel.cs" />
-    <Compile Include="Models\StuffModel.cs" />
-    <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Models\ViewModels\HomeDisplayModel.cs" />
+    <Compile Include="Models\ViewModels\IHomeDisplayModel.cs" />
+    <Compile Include="Models\ViewModels\ILeaveDisplayModel.cs" />
+    <Compile Include="Models\ViewModels\IUpdateUserInfoModel.cs" />
+    <Compile Include="Models\ViewModels\LeaveDisplayModel.cs" />
+    <Compile Include="Models\DataModels\LeaveModel.cs" />
+    <Compile Include="Models\DataModels\StuffModel.cs" />
+    <Compile Include="Models\DataModels\UserModel.cs" />
+    <Compile Include="Models\ViewModels\UpdateUserInfoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -239,7 +241,7 @@
     <None Include="packages.config" />
     <Content Include="Views\Shared\_LayoutAuth.cshtml" />
     <Content Include="Views\Auth\Login.cshtml" />
-    <Content Include="Views\Home\TakeLeave.cshtml" />
+    <Content Include="Views\Home\UpdateUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Emp_Intranet-Api\Emp_Intranet-Api.csproj">
