--- a/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
+++ b/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Controllers\AuthHelpers\AuthController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LeaveHelpers\LeaveController.cs" />
+    <Compile Include="Controllers\LeaveHelpers\LeaveHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
