Added the delete button for My Leaves on the Index page

--- a/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
+++ b/Employee-Intranet/Emp_Intranet-UI/Emp_Intranet-UI.csproj
@@ -242,6 +242,7 @@
     <Content Include="Views\Home\UpdateUser.cshtml" />
     <Content Include="Views\Home\_NewLeave.cshtml" />
     <Content Include="Views\Home\View.cshtml" />
+    <Content Include="Views\Home\DeleteLeave.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Emp_Intranet-Api\Emp_Intranet-Api.csproj">
